grundlegende funktionene für das verbinden mit frontend implementiert refs #93960 @0:45